[gd_scene load_steps=2 format=2]

[ext_resource path="res://UIElements/GameOverPanel.gd" type="Script" id=1]

[node name="GameOverPanel" type="PanelContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1262.0
margin_bottom = 702.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 1258.0
margin_bottom = 110.0
size_flags_vertical = 6
text = "A customer didn't get their order in time!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 1258.0
margin_bottom = 275.0

[node name="CustomerHolder" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 629.0
margin_right = 629.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 6

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 375.0
margin_right = 1258.0
margin_bottom = 389.0
size_flags_vertical = 6
text = "You satisfied {#} customers."
align = 1
valign = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 584.0
margin_right = 1258.0
margin_bottom = 604.0
size_flags_vertical = 6
text = "Play Again"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
